--- a/Vista/login.html
+++ b/Vista/login.html
@@ -24,7 +24,7 @@
     <script>
         function validarFormulario() {
             var username = document.getElementById("username").value;
-            var password = document.getElementById("pwd").value;
+            var password = document.getElementById("password").value;
 
             // Mensajes de advertencia
             var avisoUsername = document.getElementById("aviso-username");
